[gd_scene load_steps=6 format=3 uid="uid://csesw5rc8xqct"]

[ext_resource type="Script" path="res://main.gd" id="1_fnk6e"]
[ext_resource type="PackedScene" uid="uid://bdxyloff1kx2o" path="res://Components/sound_box_selector.tscn" id="2_ychc4"]
[ext_resource type="Script" path="res://ButtonsPanel.gd" id="2_yxiyy"]
[ext_resource type="Script" path="res://ButtonMicrophone.gd" id="4_xy210"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_qgnpa"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnk6e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="TitleMenu" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/TitleMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Sound Box GD!"

[node name="ButtonMenu" type="Button" parent="VBoxContainer/TitleMenu"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 34
text = "  ...  "

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SoundBoxSelector" parent="VBoxContainer" instance=ExtResource("2_ychc4")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsPanel" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
script = ExtResource("2_yxiyy")

[node name="BottomButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="ButtonRandom" type="Button" parent="VBoxContainer/BottomButtons"]
layout_mode = 2
tooltip_text = "Play a random sound from the current Sound Box"
theme_override_font_sizes/font_size = 48
text = "???
Random"

[node name="ButtonMicrophone" type="Button" parent="VBoxContainer/BottomButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Push
To
Talk"
script = ExtResource("4_xy210")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="VBoxContainer/BottomButtons/ButtonMicrophone"]
stream = SubResource("AudioStreamMicrophone_qgnpa")
autoplay = true
mix_target = 2
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/BottomButtons/ButtonMicrophone"]
mix_target = 2

[connection signal="pressed" from="VBoxContainer/TitleMenu/ButtonMenu" to="." method="_on_button_menu_pressed"]
[connection signal="sound_box_changed" from="VBoxContainer/SoundBoxSelector" to="VBoxContainer/ButtonsPanel" method="_on_sound_box_selector_sound_box_changed"]
[connection signal="twitch_cmd_button_pressed" from="VBoxContainer/ButtonsPanel" to="." method="_on_buttons_panel_twitch_cmd_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomButtons/ButtonRandom" to="VBoxContainer/ButtonsPanel" method="_on_button_random_pressed"]
[connection signal="button_down" from="VBoxContainer/BottomButtons/ButtonMicrophone" to="VBoxContainer/BottomButtons/ButtonMicrophone" method="_on_button_down"]
[connection signal="button_up" from="VBoxContainer/BottomButtons/ButtonMicrophone" to="VBoxContainer/BottomButtons/ButtonMicrophone" method="_on_button_up"]
